--- a/ntag424_sdm_provisioner/pyproject.toml
+++ b/ntag424_sdm_provisioner/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pycryptodome>=3.12.0",
     "textual>=0.40.0",
     "packaging>=23.0",
+    "flask>=3.0.0",
 ]
 
 [project.optional-dependencies]
