added Docker build to Makefile

--- a/ntag424_sdm_provisioner/Makefile
+++ b/ntag424_sdm_provisioner/Makefile
@@ -15,7 +15,7 @@ export PYTHONPYCACHEPREFIX := $(CURDIR)/.cache/pycache
 VENV_ACTIVATE := $(VENV)/bin/activate
 DEPS_MARKER := $(VENV)/.deps_updated
 
-.PHONY: all clean build test run deps
+.PHONY: all clean dist pkg test run deps_test test_server deps docker-run uninstall logs
 
 all: clean test
 
@@ -24,7 +24,7 @@ $(VENV_ACTIVATE):
 	@echo "Setting up virtual environment..."
 	python3 -m venv $(VENV) --system-site-packages
 	@echo "Installing dependencies..."
-	$(PIP) install --upgrade pip setuptools wheel
+	$(PIP) install --upgrade pip setuptools wheel build
 	touch $(VENV_ACTIVATE)
 
 clean:
@@ -44,13 +44,19 @@ $(DEPS_MARKER): pyproject.toml $(VENV_ACTIVATE)
 
 deps: $(DEPS_MARKER)
 
-build: deps
+dist: deps
 	@echo "Building distribution..."
 	$(PYTHON) -m build
 
-deps_test: deps
+deps_test: deps $(DEPS_MARKER)
 	@echo "Installing test dependencies..."
 	$(PIP) install -e .[dev,test]
+	touch $(DEPS_MARKER)
+
+
+test_server: deps_test
+	@echo "Running server tests..."
+	$(PYTHON) -m pytest tests/*_server*.py -v
 
 test: deps_test
 	@echo "Running tests..."
@@ -59,3 +65,30 @@ test: deps_test
 run: deps
 	@echo "Starting Flask app..."
 	. $(VENV_ACTIVATE) && PYTHONPATH=$(CURDIR)/src FLASK_APP=$(FLASK_APP) $(PYTHON) -m flask run --host=0.0.0.0 --debug
+
+
+pkg: dist
+	@echo "Building Docker image..."
+	sudo docker build -t ntag424-sdm-provisioner .
+
+docker-run:
+	@echo "Running Docker container..."
+	sudo docker run -d \
+		--name ntag424-sdm-provisioner \
+		--restart always \
+		-p 8000:8000 \
+		--memory="512m" \
+		--cpus="1.0" \
+		--read-only \
+		--tmpfs /tmp \
+		ntag424-sdm-provisioner
+
+uninstall:
+	@echo "Stopping and removing Docker container..."
+	-sudo docker stop ntag424-sdm-provisioner
+	-sudo docker rm ntag424-sdm-provisioner
+	-sudo docker rmi ntag424-sdm-provisioner
+
+logs:
+	@echo "Fetching container logs..."
+	sudo docker logs ntag424-sdm-provisioner
