--- a/ntag424_sdm_provisioner/pyproject.toml
+++ b/ntag424_sdm_provisioner/pyproject.toml
@@ -20,6 +20,7 @@ provisioner = [
 server = [
     "flask>=3.0.0",
     "pycryptodome>=3.12.0",
+    "coolname>=2.2.0",  # Random name generator for coin naming
 ]
 dev = [
     "coolname>=2.2.0",  # Random name generator for coin naming
